--- a/package.json
+++ b/package.json
@@ -1,22 +1,29 @@
 {
-  "name": "nodejs-with-firebase-authentication",
+  "name": "mevn",
   "version": "1.0.0",
-  "description": "firebase auth with jwt",
-  "main": "app.js",
+  "description": "",
+  "main": "server.js",
   "scripts": {
-    "start": "node app.js",
-    "dev": "nodemon app.js"
+    "start": "nodemon server.js"
   },
-  "author": "ns",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.19.0",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.0",
+    "config": "^3.3.7",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
-    "express": "^4.17.1",
-    "firebase": "^7.14.2",
-    "jsonwebtoken": "^8.5.1"
+    "express": "^4.18.1",
+    "express-validator": "^6.14.2",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.4.6",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.3"
+    "concurrently": "^7.3.0",
+    "nodemon": "^2.0.19"
   }
 }
