--- a/package.json
+++ b/package.json
@@ -17,10 +17,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "express-jwt": "^7.7.5",
     "express-validator": "^6.14.2",
+    "firebase-admin": "^11.0.1",
     "jsonwebtoken": "^8.5.1",
-    "md5": "^2.3.0",
     "mongoose": "^6.5.0",
     "morgan": "^1.10.0"
   },
