working with deals

--- a/.env.sample
+++ b/.env.sample
@@ -4,3 +4,5 @@ APP_PORT=8000
 APP_NAME=the_app_name
 JWT_SECRET=text-v1
 CLIENT_URL=http://localhost:8080
+JWT_ACCESS_KEY=asdhsdajkdsajhdsajhdsajhdsadsadsjkdsakjdsa
+JWT_REFRESH_KEY=zxcdjdjddkjldkldkasjdasjdkajsdlajdlasdjas
