--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "firebase-admin": "^11.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.0",
-    "morgan": "^1.10.0"
+    "mongoose-to-swagger": "^1.4.0",
+    "morgan": "^1.10.0",
+    "swagger-jsdoc": "^6.2.5",
+    "swagger-ui-express": "^4.5.0"
   },
   "devDependencies": {
     "concurrently": "^7.3.0",
