updated readme file and database seeder

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mevn",
+  "name": "myrtle-beach-passport-server",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
